--- a/Çoklu Doğrusal Regresyon/GUI v0.1 (2).ipynb
+++ b/Çoklu Doğrusal Regresyon/GUI v0.1 (2).ipynb
@@ -2,15 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "7a6d25b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
+    "import openpyxl\n",
     "from tkinter import messagebox\n",
     "from tkinter import ttk\n",
     "import pickle\n",
+    "import pandas as pd\n",
+    "import smtplib\n",
+    "import os.path\n",
+    "from openpyxl import load_workbook\n",
+    "from tkinter import messagebox\n",
+    "\n",
     "\n",
     "# Modelin formülü\n",
     "def make_prediction(marka, model, arac_paketi, motor_gucu, motor_hacmi):\n",
@@ -24,8 +31,8 @@
     "motor_hacimleri = {'1600 cm³’e kadar': 0, '2000 cm³’ten fazla': 1, 'Elektrikli Motor': 2}\n",
     "\n",
     "class Application(tk.Tk):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
+    "    def _init_(self):\n",
+    "        super()._init_()\n",
     "        self.title(\"Tahmin Uygulaması\")\n",
     "\n",
     "        # Marka Combobox\n",
@@ -64,6 +71,76 @@
     "        # Tahmin Butonu\n",
     "        self.tahmin_button = tk.Button(self, text=\"Tahmin Yap\", command=self.predict)\n",
     "        self.tahmin_button.pack()\n",
+    "        \n",
+    "        # geri bildirim Butonu\n",
+    "        self.open_feedback_form = tk.Button(self, text=\"geribildirim yap\", command=self.form_ac)\n",
+    "        self.open_feedback_form.pack()\n",
+    "        \n",
+    "        \n",
+    "    def form_ac(self):\n",
+    "        feedback_form = tk.Toplevel(self)\n",
+    "\n",
+    "        # Etiketler\n",
+    "        ad_label = tk.Label(feedback_form, text=\"Adınız:\")\n",
+    "        ad_label.grid(row=0, column=0, sticky=\"e\")\n",
+    "\n",
+    "        email_label = tk.Label(feedback_form, text=\"E-posta Adresiniz:\")\n",
+    "        email_label.grid(row=1, column=0, sticky=\"e\")\n",
+    "\n",
+    "        mesaj_label = tk.Label(feedback_form, text=\"Mesajınız:\")\n",
+    "        mesaj_label.grid(row=2, column=0, sticky=\"e\")\n",
+    "\n",
+    "        # Giriş alanları\n",
+    "        self.ad_entry = tk.Entry(feedback_form)\n",
+    "        self.ad_entry.grid(row=0, column=1)\n",
+    "\n",
+    "        self.email_entry = tk.Entry(feedback_form)\n",
+    "        self.email_entry.grid(row=1, column=1)\n",
+    "\n",
+    "        self.mesaj_text = tk.Text(feedback_form, height=5)\n",
+    "        self.mesaj_text.grid(row=2, column=1)\n",
+    "\n",
+    "        # Gönder düğmesi\n",
+    "        submit_button = tk.Button(feedback_form, text=\"Gönder\", command=self.submit_feedback)\n",
+    "        submit_button.grid(row=3, column=0, columnspan=2)\n",
+    "\n",
+    "        # Geri bildirimleri göster düğmesi\n",
+    "        view_feedback_button = tk.Button(feedback_form, text=\"Geri Bildirimleri Göster\", command=self.view_feedback)\n",
+    "        view_feedback_button.grid(row=4, column=0, columnspan=2)\n",
+    "\n",
+    "        # Bilgi etiketi\n",
+    "        self.info_label = tk.Label(feedback_form, text=\"\")\n",
+    "        self.info_label.grid(row=5, column=0, columnspan=2)\n",
+    "\n",
+    "    def submit_feedback(self):\n",
+    "        ad = self.ad_entry.get()\n",
+    "        email = self.email_entry.get()\n",
+    "        mesaj = self.mesaj_text.get(\"1.0\", \"end\")\n",
+    "\n",
+    "        # Excel dosyasını aç ve son satırı bul\n",
+    "        workbook = openpyxl.load_workbook(\"geribildirim.xlsx\")\n",
+    "        sheet = workbook.active\n",
+    "        last_row = sheet.max_row + 1\n",
+    "\n",
+    "        # Yeni geri bildirimi Excel dosyasına ekle\n",
+    "        sheet.cell(row=last_row, column=1, value=ad)\n",
+    "        sheet.cell(row=last_row, column=2, value=email)\n",
+    "        sheet.cell(row=last_row, column=3, value=mesaj)\n",
+    "\n",
+    "        # Excel dosyasını kaydet\n",
+    "        workbook.save(\"geribildirim.xlsx\")\n",
+    "\n",
+    "        # Geri bildirimin alındığını gösteren bir mesaj penceresi oluştur\n",
+    "        self.info_label.config(text=\"Geri bildiriminiz alındı. Teşekkür ederiz!\")\n",
+    "\n",
+    "    def view_feedback(self):\n",
+    "        if os.path.exists(\"geribildirim.xlsx\"):\n",
+    "            os.system(\"start geribildirim.xlsx\")\n",
+    "        else:\n",
+    "            self.info_label.config(text=\"Kaydedilmiş geri bildirim bulunamadı!\")\n",
+    "\n",
+    "        \n",
+    "\n",
     "\n",
     "    def on_marka_select(self, event):\n",
     "        marka = self.marka_combobox.get()\n",
@@ -115,8 +192,11 @@
     "            if selected_arac_paketi == 'Elite':\n",
     "                self.motor_gucu_combobox['values'] = ['200-500 hp', '200 hp\\'e kadar']\n",
     "                self.motor_hacmi_combobox['values'] = ['Elektrikli Motor', '1600 cm³’e kadar']\n",
-    "            elif selected_arac_paketi in ['Elite Smart', 'Style', 'Smart', 'Hibrit Elite', 'Hibrit Smart', 'Hibrit Style']:\n",
-    "                self.motor_gucu_combobox['values'] = ['200-500 hp']\n",
+    "            elif selected_arac_paketi =='Elite Smart':\n",
+    "                self.motor_gucu_combobox['values'] = ['200-500 hp','200 hp\\'e kadar']\n",
+    "                self.motor_hacmi_combobox['values'] = ['1600 cm³’e kadar']\n",
+    "            elif selected_arac_paketi in ['Style', 'Smart', 'Hibrit Elite', 'Hibrit Smart', 'Hibrit Style']:\n",
+    "                self.motor_gucu_combobox['values'] = ['200 hp\\'e kadar']\n",
     "                self.motor_hacmi_combobox['values'] = ['1600 cm³’e kadar']\n",
     "            elif selected_arac_paketi == 'Progressive':\n",
     "                self.motor_gucu_combobox['values'] = ['200-500 hp']\n",
@@ -157,6 +237,7 @@
     "\n",
     "\n",
     "\n",
+    "\n",
     "    def predict(self):\n",
     "        marka = markalar.get(self.marka_combobox.get())\n",
     "        model = modeller.get(self.model_combobox.get())\n",
@@ -178,61 +259,51 @@
     "\n",
     "        messagebox.showinfo(\"Tahmin Sonucu\", f\"Araç Tahmini: {tahmin:.2f}\")\n",
     "\n",
+    "        # Gerçek verileri oku\n",
+    "        veriler = pd.read_excel('Gercek-Veriler.xlsx')\n",
+    "\n",
+    "        # Kriterlere uyan verileri filtrele\n",
+    "        filt = (veriler['Marka'] == marka) & (veriler['Model'] == model) & (veriler['Araç Paketi'] == arac_paketi) & (veriler['Motor Gücü'] == motor_gucu) & (veriler['Motor Hacmi'] == motor_hacmi)\n",
+    "        uyusan_veriler = veriler[filt]\n",
+    "\n",
+    "        if not uyusan_veriler.empty:\n",
+    "            # Fiyat sütunundaki verilerin ortalamasını hesapla\n",
+    "            ortalama_fiyat = uyusan_veriler['Fiyat'].mean()\n",
+    "\n",
+    "            # Excel dosyasına tahmini ve ortalama fiyatı kaydet\n",
+    "            yeni_kayit = {\n",
+    "                'Marka': marka,\n",
+    "                'Model': model,\n",
+    "                'Araç Paketi': arac_paketi,\n",
+    "                'Motor Gücü': motor_gucu,\n",
+    "                'Motor Hacmi': motor_hacmi,\n",
+    "                'Gerçek veriler': ortalama_fiyat,\n",
+    "                'Tahmin_Edilen_Fiyat': tahmin\n",
+    "            }\n",
+    "\n",
+    "            # Yeni kaydı DataFrame'e ekle\n",
+    "            df = pd.DataFrame([yeni_kayit])\n",
+    "\n",
+    "            # Excel dosyasını aç ve DataFrame'i mevcut sayfaya ekle\n",
+    "            book = load_workbook('Yeni kayıtlar.xlsx')\n",
+    "            writer = pd.ExcelWriter('Yeni kayıtlar.xlsx', engine='openpyxl')\n",
+    "            writer.book = book\n",
+    "\n",
+    "            # DataFrame'i mevcut sayfaya ekle\n",
+    "            writer.sheets = {ws.title: ws for ws in book.worksheets}\n",
+    "            df.to_excel(writer, index=False, header=False, startrow=len(book['Sheet1'])+1)\n",
+    "\n",
+    "            # Dosyayı kaydet\n",
+    "            writer.save()\n",
+    "            writer.close()\n",
+    "        else:\n",
+    "            messagebox.showinfo(\"Uyarı\", \"Belirtilen kriterlere uyan gerçek veri bulunamadı.\")\n",
+    "\n",
+    "\n",
+    "            \n",
     "app = Application()\n",
-    "app.mainloop()\n"
+    "app.mainloop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5827521",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Arkadaşlar şimdi bu program tahmin üretiyor ve hatalı girdi almıyor, sonucun negatif gözükmesine karşı bir kontrol var.\n",
-    "# Eğer sonuç 0 dan küçükse -1 ile çarpıp pozitife çeviriyor. Seçimler doğru bir şekilde gerçekleşiyor, ve kullanıcı el ile \n",
-    "# girdi giremiyor."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "447707aa",
-   "metadata": {},
-   "source": [
-    "# Sizden İstediğim Şey"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5d4e100c",
-   "metadata": {},
-   "source": [
-    "Arkadaşlar gördüğünüz gibi proje hem görsel olarak zayıf hem de öğrenimde bulunmuyor bu bir makine öğrenimi projesi değil. Öyle olabilmesi için bunu tahmin yaptıkça tahmin sonucunu iyileştiren bir hale getirmeniz gerekiyor. Kullanıcıdan geri bildirim alınabilmeli ve yapılan tahmin ile gerçek veri kıyaslanıp yanılma payı yüzdesel biçimde ifade edilip kayıt altına alınabilmeli. Bu konuda sağlam bir araştırma geliştirme yapmanız lazım rahat olun model vs. Herşey var çalışıyor sadece üzerine eklemeler yapcaksınız, kod sizindir istediğiniz değişiklikleri yapabilirsiniz, bir hata yaşanabilmesi durumuna karşı bu dosyayı yedek alın onun üzerinde işlem yapın."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "878cd605",
-   "metadata": {},
-   "source": [
-    "Benim aklımda olan şey, yapılan tahmin ile gerçek arasında kıyaslama yapıp yapılan tahminin ne kadar doğru olduğunu kayıt altına almak olacak bunun için \"Gercek-Veriler isimli\" dosya içinde gerekli veriler mevcuttur \"Fiyat\" sütunu dahil modeli eğitmek için kullanmış olduğum veriler ve sütunları içinde ayıklanmış biçimdedir. Mesela kullanıcı bir tahminde bulunacak bulunan tahmin sonucu bu veriler içinde bululunan, kullanıcının seçtiği özelliklerdeki arabaların bulunduğu satırları seçecek ve bu satırların sonunda bululanan \"Fiyat\" sütunundaki değerlerin ortalamasını bulacak ve tahmin verisi ile kıyaslayıp sonucun ne kadar doğru olduğunu bir excel dosyasına kayıt edecek böylece, yapılan tahminlerin sonucunda modelde iyilileştirme yapılabilecek. Eğer araştırmanız sonucu daha pratik bir yöntem bulursanız. Kullanmaktan çekinmeyin, bu arada programı bir \"exe\" ve \"web\" formu şekline de getirebilirsiniz. Zorunda değilsiniz ama güzel olur, python bütün işletim sistemleriyle çalışır. Başka bir sistem bulursanız, yapın çekinmeyin güzel olur."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aadd3daf",
-   "metadata": {},
-   "source": [
-    "# *****SİZE GÜVENİYORUM BU İŞİ BAŞARACAKSINIZ*****"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f2a8193",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
