--- a/Çoklu Doğrusal Regresyon/GUI v0.1 .ipynb
+++ b/Çoklu Doğrusal Regresyon/GUI v0.1 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "7a6d25b5",
    "metadata": {},
    "outputs": [],
@@ -14,10 +14,8 @@
     "import pickle\n",
     "import pandas as pd\n",
     "import smtplib\n",
-    "import os.path\n",
     "from openpyxl import load_workbook\n",
     "from tkinter import messagebox\n",
-    "\n",
     "\n",
     "# Modelin formülü\n",
     "def make_prediction(marka, model, arac_paketi, motor_gucu, motor_hacmi):\n",
@@ -31,8 +29,8 @@
     "motor_hacimleri = {'1600 cm³’e kadar': 0, '2000 cm³’ten fazla': 1, 'Elektrikli Motor': 2}\n",
     "\n",
     "class Application(tk.Tk):\n",
-    "    def _init_(self):\n",
-    "        super()._init_()\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
     "        self.title(\"Tahmin Uygulaması\")\n",
     "\n",
     "        # Marka Combobox\n",
@@ -237,7 +235,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
     "    def predict(self):\n",
     "        marka = markalar.get(self.marka_combobox.get())\n",
     "        model = modeller.get(self.model_combobox.get())\n",
@@ -258,52 +255,22 @@
     "            tahmin *= -1\n",
     "\n",
     "        messagebox.showinfo(\"Tahmin Sonucu\", f\"Araç Tahmini: {tahmin:.2f}\")\n",
-    "\n",
-    "        # Gerçek verileri oku\n",
-    "        veriler = pd.read_excel('Gercek-Veriler.xlsx')\n",
-    "\n",
-    "        # Kriterlere uyan verileri filtrele\n",
-    "        filt = (veriler['Marka'] == marka) & (veriler['Model'] == model) & (veriler['Araç Paketi'] == arac_paketi) & (veriler['Motor Gücü'] == motor_gucu) & (veriler['Motor Hacmi'] == motor_hacmi)\n",
-    "        uyusan_veriler = veriler[filt]\n",
-    "\n",
-    "        if not uyusan_veriler.empty:\n",
-    "            # Fiyat sütunundaki verilerin ortalamasını hesapla\n",
-    "            ortalama_fiyat = uyusan_veriler['Fiyat'].mean()\n",
-    "\n",
-    "            # Excel dosyasına tahmini ve ortalama fiyatı kaydet\n",
-    "            yeni_kayit = {\n",
-    "                'Marka': marka,\n",
-    "                'Model': model,\n",
-    "                'Araç Paketi': arac_paketi,\n",
-    "                'Motor Gücü': motor_gucu,\n",
-    "                'Motor Hacmi': motor_hacmi,\n",
-    "                'Gerçek veriler': ortalama_fiyat,\n",
-    "                'Tahmin_Edilen_Fiyat': tahmin\n",
-    "            }\n",
-    "\n",
-    "            # Yeni kaydı DataFrame'e ekle\n",
-    "            df = pd.DataFrame([yeni_kayit])\n",
-    "\n",
-    "            # Excel dosyasını aç ve DataFrame'i mevcut sayfaya ekle\n",
-    "            book = load_workbook('Yeni kayıtlar.xlsx')\n",
-    "            writer = pd.ExcelWriter('Yeni kayıtlar.xlsx', engine='openpyxl')\n",
-    "            writer.book = book\n",
-    "\n",
-    "            # DataFrame'i mevcut sayfaya ekle\n",
-    "            writer.sheets = {ws.title: ws for ws in book.worksheets}\n",
-    "            df.to_excel(writer, index=False, header=False, startrow=len(book['Sheet1'])+1)\n",
-    "\n",
-    "            # Dosyayı kaydet\n",
-    "            writer.save()\n",
-    "            writer.close()\n",
-    "        else:\n",
-    "            messagebox.showinfo(\"Uyarı\", \"Belirtilen kriterlere uyan gerçek veri bulunamadı.\")\n",
-    "\n",
-    "\n",
-    "            \n",
+    "    \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "app = Application()\n",
-    "app.mainloop()"
+    "app.mainloop()\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b756283",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
